Exam 2 Cheat Sheet

--- a/Notes/Week5/week5.tex
+++ b/Notes/Week5/week5.tex
@@ -528,7 +528,7 @@
     \begin{itemize}
         \item The two double bonds \emph{plus} the lone pair of the nitrogen constitute the six $\pi$-electrons necessary for it to be aromatic.
         \begin{itemize}
-            \item Although VSEPR theory suggests that the nitrogen would be $sp^3$ hybridized so as to get all electron pairs as far away as possible, the increase in energy by rehybridizing to $sp^2$ is more than compensated for by the aromatic stabilization energy.
+            \item Although VSEPR theory suggests that the nitrogen would be $sp^3$ hybridized so as to get all electron pairs as far away as possible, the decrease in energy by rehybridizing to $sp^2$ is more than compensated for by the aromatic stabilization energy.
         \end{itemize}
         \item For this reason, pyrrole is \emph{not} a good base.
         \item Indeed, if the nitrogen picks up another hydrogen, you lose aromaticity and introduce a $+1$ formal charge on the nitrogen. Thus, since the hydrogen adduct is so unstable, it is a strong acid on the order of \ce{HCl} ($\pKa=0.9$).
@@ -757,7 +757,7 @@
     \begin{itemize}
         \item "In many simple compounds, \emph{benzene} is the parent name and the substituent is simply indicated by a prefix" \parencite[619]{bib:SolomonsEtAl}.
         \begin{itemize}
-            \item Examples: Flurorbenzene, chlorobenzene, nitrobenzene.
+            \item Examples: Fluorobenzene, chlorobenzene, nitrobenzene.
         \end{itemize}
         \item Other simple compounds have commonly accepted parent names.
         \begin{itemize}
