--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -41,7 +41,7 @@
     \begin{itemize}
         \item To begin, one of the $\pi$-bonds of benzene attacks \ce{D+}. This causes the loss of aromaticity, but the carbocation is highly resonance delocalized.
         \item Although we \emph{could} make an alcohol at this point, this would lead to the loss of aromaticity in the product, so we won't do that.
-        \item Instead, we do an E\textsubscript{1}-type reaction.
+        \item Instead, we do an E1-type reaction.
         \item The first step is the RDS.
         \item The intermediate in this mechanism is called the \textbf{arenium ion}, the \textbf{Wheland intermediate}, or the \textbf{sigma complex}.
         \item Note that the electrophile used in this reaction has to be a very special, very reactive, very strong electrophile in order to make up the energy gap.
